# RiverDeck

./: .gitignore  AGENTS.md  AUDIO_PLUGIN_IMPLEMENTATION.md  COMPATIBILITY_LAYER.md  Cargo.toml  README.md  SECURITY_AUDIT.md  install_riverdeck.sh  package.json  product_name.txt
.github/workflows/: publish.yml
crates/riverdeck-audio-router/: Cargo.toml  audio-shim-loader.js
crates/riverdeck-audio-router/src/: audio_backend.rs  lib.rs  protocol.rs  server.rs
crates/riverdeck-core/: Cargo.toml
crates/riverdeck-core/resources/: audio-shim-loader.js  linux-audio-shim.js
crates/riverdeck-core/src/: application_watcher.rs  elgato.rs  lib.rs  lifecycle.rs  marketplace.rs  openaction_marketplace.rs  options_schema.rs  runtime_processes.rs  shared.rs  ui.rs  webview.rs  zip_extract.rs
crates/riverdeck-core/src/animation/: mod.rs
crates/riverdeck-core/src/api/: icon_packs.rs  instances.rs  mod.rs  pages.rs  plugins.rs  profiles.rs  property_inspector.rs  settings.rs
crates/riverdeck-core/src/events/: mod.rs
crates/riverdeck-core/src/events/inbound/: devices.rs  misc.rs  mod.rs  property_inspector.rs  settings.rs  states.rs
crates/riverdeck-core/src/events/outbound/: applications.rs  deep_link.rs  devices.rs  encoder.rs  keypad.rs  mod.rs  property_inspector.rs  settings.rs  states.rs  will_appear.rs
crates/riverdeck-core/src/icon_packs/: index.rs  manifest.rs  mod.rs
crates/riverdeck-core/src/plugins/: discord_ipc_bridge.py  info_param.rs  manifest.rs  marketplace.rs  mod.rs  webserver.rs
crates/riverdeck-core/src/render/: device.rs  label.rs  mod.rs  plus_strip.rs  rounding.rs
crates/riverdeck-core/src/store/: mod.rs  profiles.rs  simplified_profile.rs
crates/riverdeck-egui/: Cargo.toml  build.rs
crates/riverdeck-egui/src/: main.rs  updater.rs
crates/riverdeck-egui/src/ui/: mod.rs  theme.rs  tokens.rs  widgets.rs
crates/riverdeck-pi/: Cargo.toml
crates/riverdeck-pi/src/: main.rs
docs/: plugins.md
packaging/flatpak/: io.github.sulrwin.riverdeck.json
packaging/icon_packs/io.github.sulrwin.riverdeck.iconpack.sdIconPack/: icons.json  manifest.json
packaging/icons/: icon.icns
packaging/linux/: riverdeck.desktop  riverdeck.metainfo.xml
packaging/macos/: Info.plist
packaging/windows/: build_msi.ps1  riverdeck.wxs
plugins/com.amansprojects.starterpack.sdPlugin/src/: run_command.rs
plugins/io.github.sulrwin.riverdeck.starterpack.sdPlugin/: Cargo.toml  build.ts
plugins/io.github.sulrwin.riverdeck.starterpack.sdPlugin/assets/: manifest.json
plugins/io.github.sulrwin.riverdeck.starterpack.sdPlugin/assets/propertyInspector/: runCommand.html  sdpi.css
plugins/io.github.sulrwin.riverdeck.starterpack.sdPlugin/src/: device_brightness.rs  main.rs  switch_profile.rs
plugins/io.github.sulrwin.riverdeck.template.sdPlugin/: Cargo.toml  README.md  build.ts
plugins/io.github.sulrwin.riverdeck.template.sdPlugin/assets/: manifest.json
plugins/io.github.sulrwin.riverdeck.template.sdPlugin/assets/propertyInspector/: action.html
plugins/io.github.sulrwin.riverdeck.template.sdPlugin/src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/bundle/: riverdeck.desktop
src-tauri/src/: main.rs  shared.rs
src-tauri/src/events/frontend/: instances.rs  profiles.rs
src-tauri/src/events/outbound/: keypad.rs
src-tauri/src/plugins/: webserver.rs
src-tauri/src/store/: mod.rs  profiles.rs  simplified_profile.rs
src/components/: ActionList.svelte  Key.svelte  ParentActionView.svelte  PluginManager.svelte  PropertyInspectorView.svelte  SettingsView.svelte
src/lib/: rendererHelper.ts
