[package]
name = "riverdeck-audio-router"
version = "2.7.1"
edition = "2021"
rust-version = "1.82"

[dependencies]
tokio = { version = "1.42", features = ["sync", "rt", "macros", "net", "io-util"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"

# PulseAudio bindings
libpulse-binding = "2.28"
libpulse-simple-binding = "2.28"

[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = "2.28"

