[package]
name = "riverdeck-core"
version = "2.7.1"
description = "RiverDeck backend core (device + plugin runtime + persistence)"
authors = ["Ethan Wright (sulrwin)"]
license = "GPL-3.0-or-later"
repository = "https://github.com/sulrwin/RiverDeck"
edition = "2024"

[dependencies]
anyhow = "1.0"
active-win-pos-rs = "0.9"
base64 = "0.22"
dashmap = { version = "6.1", features = ["serde"] }
directories = "6.0"
elgato-streamdeck = { version = "0.12", default-features = false, features = ["async"] }
fs2 = "0.4"
font8x8 = "0.3"
futures = "0.3"
getrandom = "0.2"
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "jpeg", "png"] }
json-patch = "4.1"
log = "0.4"
once_cell = "1.21"
open = "5.3"
os_info = "3.13"
path-slash = "0.2"
reqwest = "0.12"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-inline-default = "1.0"
serde_json = "1.0"
serde_with = "3.16"
sysinfo = { version = "0.37", default-features = false, features = ["system"] }
tiny_http = "0.12"
tokio = { version = "1.48", features = ["full"] }
tokio-tungstenite = "0.28"
urlencoding = "2.1"
zip = { version = "6.0", default-features = false, features = ["deflate", "zstd"] }

[target.'cfg(windows)'.dependencies]
windows-sys = "0.61"

[target.'cfg(unix)'.dependencies]
libc = "0.2"


