[package]
name = "riverdeck-pi"
version = "2.7.1"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
env_logger = "0.11"
log = "0.4"
open = "5.3"
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tao = "0.34"
wry = "0.53"


